Fixed github gem issues

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
+repository: Ams627/TestSite2
 
 # Build settings
 markdown: kramdown
@@ -41,3 +42,5 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+
