--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,7 @@
 title: My C# coding blog
 email: your-email@example.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Interesting thoughts on C#, WPF and XAML.
 baseurl: "/TestSite2" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
@@ -27,7 +25,8 @@ repository: Ams627/TestSite2
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-modernist
+#theme: jekyll-theme-modernist
+theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
 
